solved vertical align

--- a/app/assets/stylesheets/components/_c-slider.scss
+++ b/app/assets/stylesheets/components/_c-slider.scss
@@ -18,16 +18,17 @@
     white-space: nowrap;
   }
 
-  .slide {
-    position: relative;
-    display: inline-block;
-    width: 310px;
-    margin: 0 10px;
-  }
-
   .slides {
     display: inline-block;
   }
+
+  .slide {
+    display: inline-block;
+    width: 310px;
+    margin: 0 10px;
+    vertical-align: top;
+  }
+
 
   .next, .prev {
     @extend %centery;
